[gd_scene load_steps=4 format=3 uid="uid://bipdxnqw3va7i"]

[ext_resource type="Script" path="res://main_scene.gd" id="1_mso35"]
[ext_resource type="Texture2D" uid="uid://boy7r084vnjys" path="res://New Bitmap Image.bmp" id="2_6nosn"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_gjuij"]

[node name="MainScene" type="Node"]
script = ExtResource("1_mso35")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_gjuij")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6nosn")
expand_mode = 1

[node name="GameTitle" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -182.0
offset_top = 123.0
offset_right = 182.0
offset_bottom = 226.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.381973, 0.297728, 0.40701, 1)
theme_override_font_sizes/font_size = 75
text = "BOULDER"

[node name="NewAttemptButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -41.0
offset_right = 204.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 27
toggle_mode = true
text = "New Attempt"

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.312
anchor_top = 0.611
anchor_right = 0.669
anchor_bottom = 0.863
offset_left = 12.576
offset_top = 91.072
offset_right = 13.312
offset_bottom = -1.224
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="GamemodeButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = 64.0
offset_right = 204.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 27
toggle_mode = true
text = "Gamemode: Normal"

[connection signal="pressed" from="NewAttemptButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GamemodeButton" to="." method="_on_gamemode_button_pressed"]
